--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </DIV>
 <DIV id=Text15 style="visibility:visible;position:absolute;z-index:3;left:557;top:2;">
 <a name=#anchor_Text15></a>
-<div class=DropFrame><div><div><div><div><div><div><div><div><div style="visibility:inherit;position:relative;left:10;top:10;width:169;height:64;">
+<div class=DropBorder><div><div><div><div><div><div><div><div><div style="visibility:inherit;position:relative;left:10;top:10;width:169;height:64;">
 <DIV id=LMTxtText15 style="visibility:inherit;position:relative;left:8;top:8;width:134;height:26;overflow:auto;overflowX:hidden;overflowY:auto">
 <font face='Arial'>  <div align="left"><A href='https://bonself.github.io/My-Basic-info' onmouseover=LMTextBrOver('Text15',1) onmousedown=LMTextBrDown('Text15',1) onmouseup=LMTextBrUp('Text15',1) onmouseout=LMTextBrOut('Text15',1) STYLE='cursor:pointer'><font face="Arial" color="#0000ff" size="5"><span style=" font-size:18pt"><u>Basic Info</u></span></font></a></div>  </font>
 </DIV>
@@ -49,13 +49,13 @@
 <a name=#anchor_Text16></a>
 <div class=DropBorder><div><div><div><div><div><div><div><div><div style="visibility:inherit;position:relative;left:6;top:6;width:167;height:56;">
 <DIV id=LMTxtText16 style="visibility:inherit;position:relative;left:8;top:8;width:140;height:26;">
-<font face='Arial'>  <div align="left"><A href='https://bonself.github.io/My-rewards' onmouseover=LMTextBrOver('Text16',1) onmousedown=LMTextBrDown('Text16',1) onmouseup=LMTextBrUp('Text16',1) onmouseout=LMTextBrOut('Text16',1) STYLE='cursor:pointer'><font face="Arial" color="#0000ff" size="4"><span style=" font-size:16pt"><u>My </u></span></font><font   face="Times New Roman" color="#0000ff" size="4"><span style=" font-size:16pt"><u>Prototypes</u></span></font></a></div>  </font>
+<font face='Arial'>  <div align="left"><A href='https://bonself.github.io/My-Prototypes' onmouseover=LMTextBrOver('Text16',1) onmousedown=LMTextBrDown('Text16',1) onmouseup=LMTextBrUp('Text16',1) onmouseout=LMTextBrOut('Text16',1) STYLE='cursor:pointer'><font face="Arial" color="#0000ff" size="4"><span style=" font-size:16pt"><u>My </u></span></font><font   face="Times New Roman" color="#0000ff" size="4"><span style=" font-size:16pt"><u>Prototypes</u></span></font></a></div>  </font>
 </DIV>
 </div></div></div></div></div></div></div></div></div></div>
 </DIV>
 <DIV id=Text17 style="visibility:visible;position:absolute;z-index:5;left:737;top:70;">
 <a name=#anchor_Text17></a>
-<div class=DropBorder><div><div><div><div><div><div><div><div><div style="visibility:inherit;position:relative;left:6;top:6;width:171;height:56;">
+<div class=DropFrame><div><div><div><div><div><div><div><div><div style="visibility:inherit;position:relative;left:6;top:6;width:171;height:56;">
 <DIV id=LMTxtText17 style="visibility:inherit;position:relative;left:8;top:8;width:144;height:26;">
 <font face='Arial'>  <div align="left"><A href='https://bonself.github.io/My-rewards' onmouseover=LMTextBrOver('Text17',1) onmousedown=LMTextBrDown('Text17',1) onmouseup=LMTextBrUp('Text17',1) onmouseout=LMTextBrOut('Text17',1) STYLE='cursor:pointer'><font face="Arial" color="#0000ff" size="4"><span style=" font-size:16pt"><u>My Rewards</u></span></font></a></div>  </font>
 </DIV>
@@ -403,7 +403,7 @@ debugging different devices   of the robots. I also finished the programming by 
 <a name=#anchor_Text4></a>
 <div class=DropBorder><div><div><div><div><div><div><div><div><div style="visibility:inherit;position:relative;left:6;top:6;width:167;height:56;">
 <DIV id=LMTxtText4 style="visibility:inherit;position:relative;left:8;top:8;width:140;height:26;">
-<font face='Arial'>  <div align="left"><A href='https://bonself.github.io/My-rewards' onmouseover=LMTextBrOver('Text4',1) onmousedown=LMTextBrDown('Text4',1) onmouseup=LMTextBrUp('Text4',1) onmouseout=LMTextBrOut('Text4',1) STYLE='cursor:pointer'><font face="Arial" color="#0000ff" size="4"><span style=" font-size:16pt"><u>My </u></span></font><font   face="Times New Roman" color="#0000ff" size="4"><span style=" font-size:16pt"><u>Prototypes</u></span></font></a></div>  </font>
+<font face='Arial'>  <div align="left"><A href='https://bonself.github.io/My-Prototypes' onmouseover=LMTextBrOver('Text4',1) onmousedown=LMTextBrDown('Text4',1) onmouseup=LMTextBrUp('Text4',1) onmouseout=LMTextBrOut('Text4',1) STYLE='cursor:pointer'><font face="Arial" color="#0000ff" size="4"><span style=" font-size:16pt"><u>My </u></span></font><font   face="Times New Roman" color="#0000ff" size="4"><span style=" font-size:16pt"><u>Prototypes</u></span></font></a></div>  </font>
 </DIV>
 </div></div></div></div></div></div></div></div></div></div>
 </DIV>
