use video in root diretory

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 /p2_5.jpg" style="width:464;height:373;border:0;"></DIV>
 <DIV id=Img11 style="visibility:visible;overflow:hidden;position:absolute;z-index:27;left:63;top:3363;">
 <video width="433" height="348" controls>
-  <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P21.mp4" type="video/mp4">
- <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P21.ogg" type="video/ogg">  
+  <source src="P21.mp4" type="video/mp4">
+ <source src="P21.ogg" type="video/ogg">  
    Your EI dosen't support' HTML5 video
 </video>
 </DIV>
@@ -231,16 +231,16 @@
 <DIV id=Img12 style="visibility:visible;overflow:hidden;position:absolute;z-index:28;left:525;top:3362;">
 <a name=#anchor_Img12></a>
 <video width="433" height="348" controls>
-  <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P22.mp4" type="video/mp4">
- <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P22.ogg" type="video/ogg">  
+  <source src="P22.mp4" type="video/mp4">
+ <source src="P22.ogg" type="video/ogg">  
    Your EI dosen't support' HTML5 video
 </video>
 
 </DIV>
 <DIV id=Img13 style="visibility:visible;overflow:hidden;position:absolute;z-index:29;left:196;top:3787;">
 <video width="603" height="484" controls>
-  <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P23.mp4" type="video/mp4">
- <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P23.ogg" type="video/ogg">  
+  <source src="P23.mp4" type="video/mp4">
+ <source src="P23.ogg" type="video/ogg">  
    Your EI dosen't support' HTML5 video
 </video>
 
@@ -369,16 +369,16 @@ debugging different devices   of the robots. I also finished the programming by 
 <DIV id=Img15 style="visibility:visible;overflow:hidden;position:absolute;z-index:50;left:272;top:5339;">
 
 <video width="518" height="374" controls>
-  <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P31.mp4" type="video/mp4">
- <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P31.ogg" type="video/ogg">  
+  <source src="P31.mp4" type="video/mp4">
+ <source src="P31.ogg" type="video/ogg">  
    Your EI dosen't support' HTML5 video
 </video>
 
 </DIV>
 <DIV id=Img21 style="visibility:visible;overflow:hidden;position:absolute;z-index:51;left:65;top:7451;">
 <video width="398" height="348" controls>
-  <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P41.mp4" type="video/mp4">
- <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P41.ogg" type="video/ogg">  
+  <source src="P41.mp4" type="video/mp4">
+ <source src="P41.ogg" type="video/ogg">  
    Your EI dosen't support' HTML5 video
 </video>
 
@@ -435,8 +435,8 @@ debugging different devices   of the robots. I also finished the programming by 
 </DIV>
 <DIV id=Img4 style="visibility:visible;overflow:hidden;position:absolute;z-index:59;left:520;top:7450;">
 <video width="398" height="348" controls>
-  <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P42.mp4" type="video/mp4">
- <source src="https://github.com/bonself/Go-aboard/raw/master/vidieo/P41.ogg" type="video/ogg">  
+  <source src="P42.mp4" type="video/mp4">
+ <source src="P41.ogg" type="video/ogg">  
    Your EI dosen't support' HTML5 video
 </DIV>
 
